--- a/Lab1/Lab1.csproj
+++ b/Lab1/Lab1.csproj
@@ -5,12 +5,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Compile Remove="wwwroot\**" />
+    <Content Remove="wwwroot\**" />
+    <EmbeddedResource Remove="wwwroot\**" />
+    <None Remove="wwwroot\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\20190524104828_ChangedReleaseYear.cs" />
+    <Compile Remove="Migrations\20190524104828_ChangedReleaseYear.Designer.cs" />
+    <Compile Remove="Migrations\20190603122246_AddUserAndRegistrationModels.cs" />
+    <Compile Remove="Migrations\20190603122246_AddUserAndRegistrationModels.Designer.cs" />
+    <Compile Remove="Migrations\20190603122514_AddUserModel.cs" />
+    <Compile Remove="Migrations\20190603122514_AddUserModel.Designer.cs" />
+    <Compile Remove="Migrations\20190603151106_AddUserModel.cs" />
+    <Compile Remove="Migrations\20190603151106_AddUserModel.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
